--- a/network-posts-development.yaml
+++ b/network-posts-development.yaml
@@ -3,3 +3,12 @@ server:
 spring:
   application:
     name: network-posts
+  datasource:
+    url: jdbc:postgresql://database:5432/network
+    driver-class-name: org.postgresql.Driver
+    username: postgres
+    password: root
+eureka:
+  client:
+    service-url:
+      defaultZone: http://network-discovery-server:8761/eureka/
